# JALPAN

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
jalpan/: db.sqlite3  manage.py
jalpan/jalpan/: asgi.py  settings.py  urls.py  wsgi.py
jalpan/management/: admin.py  models.py  urls.py  views.py
jalpan/management/migrations/: 0001_initial.py  0002_food_food_image.py  0002_orders.py  0003_alter_orders_order_amount_and_more.py  0003_food_food_id.py  0004_delete_orders.py  0005_rename_food_catagory_food_food_category.py  0006_rename_food_category_food_food_catagory.py
jalpan/management/static/: reset.css
jalpan/management/templates/: addFood.html  editFood.html  editablemenu.html  main.html  manageFood.html  navbar.html  orders.html
jalpan/management/templatetags/: editablemenu_tags.py
jalpan/order/: admin.py  views.py
jalpan/order/templates/: menu.html  navbar_order.html  order.html
jalpan/order/templatetags/: menu_tags.py
jalpan/scripts/: README.md  addToDatabase.py  cleanMenu.py  clearDB.py  downloadImgs.py  updateJsons.py
jalpan/scripts/menus/: burgers.json  desserts.json  drinks.json  ice-cream.json  pizzas.json  sandwiches.json
jalpan/static/bootstrap/css/: bootstrap-reboot.min.css
jalpan/static/css/: food.css
