[tool.poetry]
name = "jalpan"
version = "1.0.0"
description = "Menu management system"
authors = ["Prayag Prajapati <prayagprajapati.17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
autopep8 = "^2.0.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
djlint = "^1.19.7"
autopep8 = "^2.0.1"
poethepoet = "^0.17.1"

[tool.poe.tasks]
migrate = "py jalpan/manage.py migrate"
runserver = "py jalpan/manage.py runserver"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
